# CHPS0802

./: README.md
TP1/: CMakeLists.txt  Makefile  prac1a.cu  prac1a.sh  prac1b.cu  prac1c.sh
TP1/bash/: prac1b.sh  src.sh  unitaryTests.sh
TP1/src/: CMakeLists.txt  prac1b.cu  prac1b.sh  prac1b_impl.cu  prac1b_impl.h
TP1/test/: CMakeLists.txt  test.txt  tests.cu
TP2/: CMakeLists.txt
TP2/bash/: prac2.sh  prac2_currand.sh
TP2/src/: CMakeLists.txt  prac2.cu  prac2_currand.cu  prac2_impl.cu  prac2_impl.h
TP2/test/: CMakeLists.txt  tests.cu
TP3/: CMakeLists.txt
TP3/bash/: laplace3d.sh  laplace3d_new.sh  tests.sh
TP3/src/: CMakeLists.txt  laplace3d.cu  laplace3d_gold.cpp  laplace3d_new.cu
TP3/test/: CMakeLists.txt  tests.cu
TP4/: CMakeLists.txt
TP4/bash/: reduction.sh
TP4/src/: CMakeLists.txt  reduction.cu
TP4/test/: CMakeLists.txt  tests.cu
